# simple_eq

./: Makefile  README.md  SimpleEQ  acoustic.cfg  eq.cfg  launch.sh  test.sh
src/: Config.hh  Daemon_Head.cc  Daemon_Head_PA.cc  Filter.cc  Filter.hh  Latency.cc  Latency.hh
src/Gstreamer/: CMakeLists.txt  gst_simpleeq.c  gst_simpleeq.h
